CTT_Package/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Care Requests</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Outreach</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Outreach Underway</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Contact Tracing</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Outreach</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Outreach Underway</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Abdominal_Pain__c</fullName>
        <label>Abdominal Pain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Able_to_self_isolate__c</fullName>
        <label>Able to self isolate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HOSPITAL_NAME</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreed_to_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to confirm whether or not the contact agreed to test.</description>
        <label>Agreed to Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assign_to_Queue__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If selected, Case will be assigned to the relevant Queue. If not selected, Case will remain assigned to user creating the Case.</inlineHelpText>
        <label>Send To Contact Trace Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assistance_Needs_Other__c</fullName>
        <description>Text field if user choose &quot;Other&quot; from Referred to Resource Coordinator Reason field, user can specify the other reason.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If Assistance needs other reason, please specify.</inlineHelpText>
        <label>Referred to Resource Coordinator, Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assistance_Needs__c</fullName>
        <description>Multi Select field on Case Referred to Resource Coordinator</description>
        <label>Referred to Resource Coordinator Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Support for Chronic Medical Conditions</fullName>
                </value>
                <value>
                    <fullName>Lack of Mobility or Support for ADLs</fullName>
                </value>
                <value>
                    <fullName>Specific Household Items</fullName>
                </value>
                <value>
                    <fullName>Social Network Connection</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Medication</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>At_risk_household_members__c</fullName>
        <label>At risk household members</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Are more than 65 years old</fullName>
                </value>
                <value>
                    <fullName>Chronic conditions</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Chronic kidney disease</fullName>
                </value>
                <value>
                    <fullName>Chronic lung disease</fullName>
                </value>
                <value>
                    <fullName>Liver disease</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular disease</fullName>
                </value>
                <value>
                    <fullName>Are immunocompromised</fullName>
                </value>
                <value>
                    <fullName>HIV</fullName>
                </value>
                <value>
                    <fullName>Cancer patients</fullName>
                </value>
                <value>
                    <fullName>Receiving chemotherapy</fullName>
                </value>
                <value>
                    <fullName>Patients on immunosuppressant drugs</fullName>
                </value>
                <value>
                    <fullName>Have other risks</fullName>
                </value>
                <value>
                    <fullName>Extreme obesity</fullName>
                </value>
                <value>
                    <fullName>On dialysis</fullName>
                </value>
                <value>
                    <fullName>Have received a transplant</fullName>
                </value>
                <value>
                    <fullName>Are pregnant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Buildings_Visited__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Buildings/Facilities visited</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CONTACT_MONITORING_STATUS__c</fullName>
        <formula>IF(OR(TEXT(Close_Reason__c) == &quot;Isolation completed&quot;, TEXT(Close_Reason__c) == &quot;Quarantine completed&quot;), &quot;COMPLETE&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Monitoring Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRF_COMPLETE_NO_REASON__c</fullName>
        <formula>CASE(TEXT(Close_Reason__c),
&quot;Lost to follow up&quot;,&quot;LOST&quot;,
&quot;Was never reached&quot;,&quot;LOST&quot;,
&quot;Referred to LBOH&quot;,&quot;OTHER&quot;,
&quot;Referred to other provider&quot;,&quot;OTHER&quot;,
&quot;Declined&quot;,&quot;OTHER&quot;,
&quot;Other&quot;,&quot;OTHER&quot;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRF Complete No Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRF_COMPLETE__c</fullName>
        <formula>IF(TEXT(Close_Reason__c) == &apos;Referred to LBOH&apos; || TEXT(Close_Reason__c) == &apos;Referred to other provider&apos; || TEXT(Close_Reason__c) == &apos;Lost to follow up&apos; || 
TEXT(Close_Reason__c) == &apos;Was never reached&apos; || 
TEXT(Close_Reason__c) == &apos;Declined&apos; || 
TEXT(Close_Reason__c) == &apos;Other&apos;, &quot;NO&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRF Complete</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRF_OTHER_SPECIFY__c</fullName>
        <formula>CASE(TEXT(Close_Reason__c),

&apos;Referred to LBOH&apos;, &apos;Referred to LBOH&apos;,

&apos;Referred to other provider&apos;, &apos;Referred to other provider&apos;,

&apos;Declined&apos;, &apos;Declined&apos;,

&apos;Other&apos;, Closed_Reason_Other__c,

&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CRF Other Specify</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseTime__c</fullName>
        <formula>AND(TIMEVALUE(CreatedDate) &gt; TIMEVALUE(&apos;8:00:00.00&apos;) , TIMEVALUE(CreatedDate) &lt; TIMEVALUE(&apos;18:00:00.00&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseTime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Hospitalized__c</fullName>
        <description>CASE_HOSPITALIZED</description>
        <inlineHelpText>Was case hospitalized?</inlineHelpText>
        <label>Case Hospitalized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cell_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cell Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Chills__c</fullName>
        <label>Chills</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Input__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>/**
 * Use Contact Mailing City, if Contact is set, otherwise use Account Billing City. In both cases, if state is not MA, then show state as well
 */
IF(NOT(ISBLANK(ContactId)),
   Contact.MailingCity &amp; IF(Contact.MailingState != &apos;MA&apos;, &apos;, &apos; &amp; Contact.MailingState, &apos;&apos;),
   Account.BillingCity &amp; IF(Account.BillingState != &apos;MA&apos;, &apos;, &apos; &amp; Account.BillingState, &apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Complications__c</fullName>
        <description>CLINICAL_COMPLICATIONS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Clinical Complications</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <label>Closed Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All contact outreach contacts collected</fullName>
                </value>
                <value>
                    <fullName>Provided contact outreach guidance</fullName>
                </value>
                <value>
                    <fullName>Referred to other provider</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Isolation completed</fullName>
                </value>
                <value>
                    <fullName>Lost to follow up</fullName>
                </value>
                <value>
                    <fullName>Was never reached</fullName>
                </value>
                <value>
                    <fullName>Contact diagnosed with COVID-19</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Died</fullName>
                </value>
                <value>
                    <fullName>Approved to Return to Work(RTW)</fullName>
                    <label>Approved to Return to Work (RTW)</label>
                </value>
                <value>
                    <fullName>Couldn&apos;t be reached</fullName>
                    <isActive>false</isActive>
                    <label>Couldn&apos;t be reached</label>
                </value>
                <value>
                    <fullName>Death/Deceased</fullName>
                    <isActive>false</isActive>
                    <label>Death/Deceased</label>
                </value>
                <value>
                    <fullName>Existing Case</fullName>
                    <isActive>false</isActive>
                    <label>Existing Case</label>
                </value>
                <value>
                    <fullName>Invalid/Wrong Number</fullName>
                    <isActive>false</isActive>
                    <label>Invalid/Wrong Number</label>
                </value>
                <value>
                    <fullName>Lost to Follow-up</fullName>
                    <isActive>false</isActive>
                    <label>Lost to Follow-up</label>
                </value>
                <value>
                    <fullName>Lost to monitoring</fullName>
                    <isActive>false</isActive>
                    <label>Lost to monitoring</label>
                </value>
                <value>
                    <fullName>Quarantine completed</fullName>
                    <isActive>false</isActive>
                    <label>Quarantine completed</label>
                </value>
                <value>
                    <fullName>Recovered</fullName>
                    <isActive>false</isActive>
                    <label>Recovered</label>
                </value>
                <value>
                    <fullName>Referred to LBoH</fullName>
                    <isActive>false</isActive>
                    <label>Referred to LBoH</label>
                </value>
                <value>
                    <fullName>Refused Interview</fullName>
                    <isActive>false</isActive>
                    <label>Refused Interview</label>
                </value>
                <value>
                    <fullName>Successfully Completed Quarantine</fullName>
                    <isActive>false</isActive>
                    <label>Successfully Completed Quarantine</label>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <isActive>false</isActive>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closed_Reason_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Closed Reason: If Other, Please Specify</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Inquiries__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Inquiries</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Inquiries</relationshipLabel>
        <relationshipName>Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Is_A_Minor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to indicate if the contact is a minor or not.</description>
        <label>Person Is A Minor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Tracing__c</fullName>
        <formula>IF( Parent.Presumptive__c, false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ready for Contact Tracing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_of_Self_Reported_Positive__c</fullName>
        <formula>AND(NOT(ISBLANK(ParentId)),Parent.Self_Reported_Positive__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact of Self-Reported Positive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cough_Onset_Date__c</fullName>
        <description>COUGH_ONSET_DATE</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Cough Onset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cough__c</fullName>
        <description>SS_COUGH</description>
        <label>Cough</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Discharged__c</fullName>
        <description>DATE_DISCHARGED</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Discharged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Hospitalized__c</fullName>
        <description>DATE_HOSPITALIZED</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Hospitalized</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Death__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Death</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diarrhea__c</fullName>
        <description>SS_DIARRHEA</description>
        <label>Diarrhea</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Difficulty_Breathing__c</fullName>
        <description>SS_DIFFICULTY_BREATHING_SHORTNESS_BREATH</description>
        <inlineHelpText>Difficulty breathing/Shortness of breath:</inlineHelpText>
        <label>Difficulty Breathing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disease_Status__c</fullName>
        <description>DISEASE_STATUS</description>
        <inlineHelpText>Disease classification status:</inlineHelpText>
        <label>Disease Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_Contact_have_a_Provider__c</fullName>
        <description>Global picklist on Contact Object to prompt Provider</description>
        <label>Does Contact have a Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Does_contact_know_about_their_exposure__c</fullName>
        <label>Does contact know you tested positive?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employed_or_Admitted_Care_Location__c</fullName>
        <description>EMPLOYED_OR_ADMITTED_HEALTHCARE_WHERE</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Facility Name/Location:</inlineHelpText>
        <label>Congregate Setting Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employed_or_Admitted_Healthcare__c</fullName>
        <description>EMPLOYED_OR_ADMITTED_HEALTHCARE</description>
        <inlineHelpText>Employed at, admitted to, or visited a healthcare setting?</inlineHelpText>
        <label>Connected to Congregate Setting?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employed_or_Admitted_Location_Type__c</fullName>
        <description>EMPLOYED_OR_ADMITTED_HEALTHCARE_TYPE</description>
        <inlineHelpText>Facility type:</inlineHelpText>
        <label>Congregate Setting Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Facility_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employed_or_Admitted_Other_Detail__c</fullName>
        <description>EMPLOYED_OR_ADMITTED_HEALTHCARE_TYPE_OTHER_SP</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Employed or Admitted Healthcare- Other details, specify:</inlineHelpText>
        <label>Congregate Setting Other Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employer_Letter_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employer Letter Requested?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exposed_Others_Detail__c</fullName>
        <description>exposed_others_other_specify</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Where did case expose others?(Confirmed cases only)</inlineHelpText>
        <label>Exposed Others Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exposed_Others__c</fullName>
        <description>exposed_others</description>
        <inlineHelpText>Where did case expose others?(Confirmed cases only)</inlineHelpText>
        <label>Exposed Others</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exposure_Locations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exposure_Source_Details__c</fullName>
        <description>exposure_source_other_specify</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Exposure Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exposure_Source__c</fullName>
        <description>exposure_source</description>
        <inlineHelpText>Where was case potentially exposed?</inlineHelpText>
        <label>Where was the Case Exposed?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Exposure_Locations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Face_Covering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did you wear a face mask?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fever_Duration__c</fullName>
        <description>FEVER_DURATION (Days)</description>
        <inlineHelpText>Fever Duration Days</inlineHelpText>
        <label>Fever Duration</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fever_Onset_Date__c</fullName>
        <description>FEVER_ONSET_DATE</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fever Onset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fever_Temperature_Unit__c</fullName>
        <label>Fever Temperature Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FARENHEIT</fullName>
                </value>
                <value>
                    <fullName>CELCIUS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fever_Temperature__c</fullName>
        <description>FEVER_TEMPERATURE</description>
        <label>Fever Temperature</label>
        <precision>11</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fever__c</fullName>
        <description>SS_FEVER</description>
        <label>Fever</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Monitoring_Date__c</fullName>
        <description>FIRST_MONITORING_DATE</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First Monitoring Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlagCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FlagCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_already_been_tested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to confirm whether or not the contact has already been tested.</description>
        <label>Have you already been tested?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headache__c</fullName>
        <description>SS_HEADACHE</description>
        <label>Headache</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Health_care_worker_or_facility__c</fullName>
        <inlineHelpText>Is the contact a health care worker or admitted to a healthcare setting? (hospital, long term care facility)</inlineHelpText>
        <label>Health care worker or facility?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Hospital_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>HOSPITAL_NAME</description>
        <label>Hospital Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Hospital Name)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Household_Relationship__c</fullName>
        <label>Household Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spouse/Partner</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ICU_Admission_Date__c</fullName>
        <description>ADMITTED_ICU_DATE</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ICU Admission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICU_Admission__c</fullName>
        <description>ADMITTED_ICU</description>
        <label>ICU Admission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ICU_Discharge_Date__c</fullName>
        <description>DISCHARGED_ICU_DATE</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ICU Discharge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IX_Pregnancy_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Import/Export value for Pregnancy Detail</inlineHelpText>
        <label>Imp/Exp Pregnancy Detail</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IX_Underlying_Illness_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Import/Export value for Underlying Illness Description</inlineHelpText>
        <label>Imp/Exp Underlying Illness Description</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IX_Underlying_Illness_Specify_Other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Import/Export value for Underlying Illness Specify Other</inlineHelpText>
        <label>Imp/Exp Underlying Illness Specify Other</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IX_Underlying_Illness_Specify__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Import/Export value for Underlying Illness Specify</inlineHelpText>
        <label>Imp/Exp Underlying Illness Specify</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_which_facility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, which facility?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infective_Period_End_Date__c</fullName>
        <formula>BLANKVALUE(Symptom_Onset_Date__c+14,Test_Taken_Date__c+14)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Infective Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Infective_Period_Start_Date__c</fullName>
        <formula>BLANKVALUE(Symptom_Onset_Date__c-2,  Test_Taken_Date__c-2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Infective Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inquiry_Record_Type__c</fullName>
        <description>Created new formula field to Display Case name to avoid editing of Case.RecordTypedID</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inquiry Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interview_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this when the Case Investigator/Contact Tracer has completed their interview.</inlineHelpText>
        <label>Interview Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interview_Completed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Interview Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Investigation_Status_Other__c</fullName>
        <description>INVESTIGATION_STATUS_OTHER_SPECIFY</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Investigation Status, Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigation_Status__c</fullName>
        <label>Investigation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Investigation_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Investigator_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Interviewer name:</inlineHelpText>
        <label>Investigator Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investigator_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Interviewer phone:</inlineHelpText>
        <label>Investigator Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Is_Healthcare_Worker__c</fullName>
        <label>Is Healthcare Worker?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_My_Team__c</fullName>
        <formula>Text($User.Team__c) == Text(Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Pregnant__c</fullName>
        <label>X-Is Pregnant?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
</CustomObject>